# project2

./: AddAutomaton.h  Automaton.h  CMakeLists.txt  ColonDashAutomaton.cpp  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  DatalogProgram.cpp  DatalogProgram.h  EOFAutomaton.cpp  EOFAutomaton.h  FactsAutomaton.h  ID.cpp  ID.h  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiComment.cpp  MultiComment.h  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.h  Predicate.cpp  Predicate.h  QmarkAutomaton.cpp  QmarkAutomaton.h  QueriesAutomaton.h  RightParenAutomaton.h  Rule.cpp  Rule.h  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  (+5 more)
Lab2PassOffCases/2-80/: input0.txt  test.txt
lab1.dSYM/Contents/Resources/DWARF/: lab1
